--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">WhatToDo</string>
     <string name="click">Touch!</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="imdb_stats">http://www.imdb.com/stats</string>
+    <string name="imdb_css_selector">[cellspacing="2"] tr [align="right"] </string>
 </resources>
