--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="log_fallback_id">Fallback id is </string>
     <string name="metascore">Metascore:</string>
     <string name="metascore_na">Metascore: N/A</string>
+    <string name="next_movie">Next Movie</string>
 </resources>
