--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="awards">Awards:&#160;</string>
     <string name="director">Director:&#160;</string>
     <string name="view_on_imdb">View on IMDB</string>
+    <string name="movie_ignored">Movie was ignored</string>
 </resources>
