--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="director">Director:&#160;</string>
     <string name="view_on_imdb">VIEW ON IMDB</string>
     <string name="movie_ignored">Movie was ignored</string>
+    <string name="no_internet">No Internet connection</string>
 </resources>
