--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">WhatSIW?</string>
+    <string name="app_name">WhatSIW</string>
     <string name="click">Touch!</string>
     <string name="imdb_stats">http://www.imdb.com/stats</string>
     <string name="imdb_link">http://www.imdb.com/title/tt</string>
