--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="no_internet">No Internet connection</string>
     <string name="loading">Loading</string>
     <string name="please_wait">Please Wait…</string>
+    <string name="episode_ignored">Episode #</string>
 </resources>
