better ignored layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="by_award">By award</string>
     <string name="by_score">By score</string>
     <string name="slower_warning">Search can be a lot slower!</string>
+    <string name="no_image">NO IMAGE</string>
 </resources>
