--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="ignore_this_movie">IGNORE MOVIE</string>
     <string name="title_activity_ignored_movies">Ignored Movies</string>
     <string name="menu_item_ignored">Ignored movies</string>
-    <string name="getting_movie">Loading movie</string>
+    <string name="getting_movie">Loading movieConverted</string>
     <string name="unignore_movie">Remove</string>
     <string name="actors">Actors:&#160;</string>
     <string name="awards">Awards:&#160;</string>
